--- a/styles/login.css
+++ b/styles/login.css
@@ -40,9 +40,10 @@ section {
   align-self: self-end;
   box-shadow: 0px 0px 3px 3px rgba(0,0,0,0.3);
 }
-.slider img {
+.mySlides img {
   width: 100%;
-  object-fit: cover;
+  height: 100%;
+  object-fit: cover; 
 }
 .slider > div {
   position: absolute;
@@ -50,8 +51,9 @@ section {
   height: 100%;
   top: 0;
   right: 0;
-  background-color: black;
-  opacity: .3;
+  /* Elimina la capa negra de fondo */
+  /* background-color: black; */
+  /* opacity: .65; */
 }
 /*2da sección: login*/
 /*Estilos de segunda sección*/
