--- a/styles/login.css
+++ b/styles/login.css
@@ -10,6 +10,7 @@
   --jacksons-purple: #213295;
   --denim: #114ecb;
   --oracle: #3e6f7c;
+  --blue-gradient: linear-gradient(138deg, rgb(33 50 149 / .8) 0%, rgb(40 110 200 / .8) 100%);
 }
 /*
  * La envoltura de la página, centra todos sus elementos. 
@@ -71,7 +72,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgb(0 0 0 / .5); 
+  background-color: rgb(0 0 0 / .2); 
 }
 /*
  * La sección de login tiene todos sus elementos centrados.
@@ -102,14 +103,14 @@
   border-radius: 15px;
   gap: 10px;
   padding: 8%;
-  background: linear-gradient(138deg, rgb(33 50 149 / .8) 0%, rgb(40 110 200 / .8) 100%);
+  background: var(--blue-gradient); 
   backdrop-filter: blur(4px);
 }
 /*
  * La imagen del logo ocupa un 80& del ancho del contenedor
  */
 .login-section img {
-  width: 80%;
+  width: 65%;
 }
 /*
  * Texto guía "Ingrese sus datos"
