--- a/styles/login.css
+++ b/styles/login.css
@@ -1,18 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Asap&family=Grandstander:wght@300&display=swap'); /*Grandstander es una letra animada*/
-/*Normalize*/
-* {
-  margin: 0;
-  box-sizing: border-box;
-}
 :root {
+  --but-hover: rgb(229 48 48 / .9);
+  --but-col: rgb(247 227 7 / .9);
   --cinnabar: #e53030;
   --cerulean: #0493cf;
   --golden-fizz: rgb(247 227 7);
   --jacksons-purple: #213295;
   --denim: #114ecb;
-  --oracle: #3e6f7c;
   --blue-gradient: radial-gradient(circle, rgba(11 146 168 / .8) 0%, rgb(41 122 219 / .8) 41%, rgb(9 80 149 /.8) 100%);
- /* --blue-gradient: linear-gradient(138deg, rgb(33 50 149 / .8) 0%, rgb(40 110 200 / .8) 100%);*/
 }
 /*
  * La envoltura de la página, centra todos sus elementos. 
@@ -27,7 +21,6 @@
   background-color: black;
   position: relative;
   min-height: 100vh;
-  font-family: 'Kanit', sans-serif;
 }
 /*
  * El contenedor del slider se fija a la pantalla, esto
@@ -129,6 +122,7 @@
   display: flex;
   flex-direction: column;
   color: white;
+  gap: 5px;
 }
 /*
  * Las etiquetas de cada entrada de elementos, con una fuente 
@@ -158,19 +152,29 @@
 /*
  * El submit del formulario, con bordes redondeados y una alineación
  * propia hacia el centro, además sus estilos por default son eliminados.
- * También, se le agrega una transición qu será utilizada cuando el mouse
- * pase encima del elemento
+ * También, se le agrega una transición y animación que serán utilizados 
+ * cuando el mouse pase encima del elemento
  */
 .text-button {
   width: min-content;
   margin-top: 20px;
   align-self: center;
-  border-radius: 50em;
   font-weight: bold;
+  position: relative;
+  background-color: var(--but-col);   
+  outline: transparent 2px solid;
+  border-radius: 10px;
+  padding: 5px;
+  font-size: 85%;
   border: none;
-  background-color: var(--golden-fizz);
-  padding: 3px 9px; 
-  transition: background 0.3s linear;
+  transition: background 0.2s linear;
+  font-family: 'Asap', sans-serif;
+
+  &:hover {
+    animation: pulse 1s infinite;
+    background-color: var(--but-hover);
+    color: var(--but-col);
+  }
 }
 /*
  * Cuando el mouse pasa por encima el fondo cambia. Aquí se realiza la
@@ -235,5 +239,13 @@
   }
   100% {
     transform: translateX(2px);
+  }
+}
+@keyframes pulse {
+  from {
+    box-shadow: 0 0 0 0 rgb(0 0 0 / 0.2);
+  }
+  to {
+    box-shadow: 0 0 0 8px rgb(0 0 0 / 0);
   }
 }
