--- a/esqueletos/styleters.css
+++ b/esqueletos/styleters.css
@@ -13,16 +13,23 @@
 }
 .wrapper {
     display: flex;
+    background-image: url('../img/Fondo.png');
+    background-size: cover; 
+    background-position: center; 
+    height: 100vh; 
 }
 .tabladeopciones {
-    background-color: rgba(79, 247, 168, 0.5); 
+    background-color: rgba(200, 236, 236, 0.747); 
     backdrop-filter: blur(10px);
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100vh;
-    width: 20%;
-    border-radius: 10px
+    width: 22%;
+    border-radius: 10px;
+}
+.imagenes{
+    margin-left: 20px;
 }
 .opciones{
     display: flex;
@@ -31,9 +38,41 @@
     padding: 0;
     margin: 0;
 }
+.opciones li {
+    display: flex;
+    list-style: none;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-radius: 5px;
+    width: 19vh;
+    height: 10vh;
+    border: 3px solid rgba(243, 40, 40, 0.877);
+    margin: 5vh;
+    transition-duration: 0.4s;
+}
+.opciones li:hover{
+    background-color: rgba(243, 40, 40, 0.87); 
+}
+.opciones li a {
+    display: flex; 
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%; 
+    height: 100%;
+    text-decoration: none !important; /* Elimina el subrayado */
+    color: black; 
+    transition-duration: 0.3s;
+}
+.opciones li a:hover {
+    color: yellow;
+}
 li{
     list-style-type: none;
 }
+
 .cursos{
     display: flex;
     flex-direction: column;
@@ -42,13 +81,14 @@ li{
 .curso{
     display: flex;
     flex-direction: row;
-    background-color: #4edd7d; /* Fondo de color gris claro */
-    border-radius: 10px; /* Esquinas redondeadas */
+    background-color: #4edd7d; /* Fondo de color verde claro */
+    border-radius: 10px;
     backdrop-filter: blur(5px); /* Efecto difuminado */
 }
 .curso *{ /* Para todos los elementos dentro de article curso*/
     margin: 3vh;
     border-radius: 3vh;
+    transition-duration: 0.3s;
 }
 .curso img{
     border-radius: 1vh;
@@ -70,9 +110,10 @@ li{
 }
 .info-partida {
     flex: 1; /* Ocupa el espacio disponible de manera equitativa */
-    max-width: 100vh; /* Limita cada sección a un máximo del 25% del ancho total */
+    max-width: 100vh; 
     padding: 10px;
     border: 1px solid #ccc;
     background-color: #fff;
     margin: 5px; /* Agrega un pequeño margen entre las secciones */
 }
+
