--- a/styles/aulaVirtual.css
+++ b/styles/aulaVirtual.css
@@ -1,4 +1,7 @@
 /*Normalize*/
+/* ultimo funcional: antes de grid
+ * a0ec2a5ef682f86b53e05165da4d16536e73d57
+ */
 * {
     margin: 0;
     box-sizing: border-box;
@@ -12,11 +15,14 @@
     --oracle: #3e6f7c;
 }
 .wrapper {
-    display: flex;
+    display: grid;
     background-image: url('../img/Fondo.png');
     background-size: cover; 
     background-position: center; 
     height: 100vh; 
+    grid-template-areas:
+    "tabladeopciones informacion"
+    "tabladeopciones informacion"
 }
 .tabladeopciones {
     background-color: rgba(200, 236, 236, 0.747); 
@@ -25,11 +31,17 @@
     flex-direction: column;
     justify-content: center;
     height: 100vh;
-    width: 22%;
+    width: 100%;
+    max-width: 250px;
     border-radius: 10px;
+    grid-area: tabladeopciones;
 }
 .imagenes{
-    margin-left: 20px;
+    /*margin-left: 5%;*/
+}
+.imagenes img{
+    margin-left: 10%;
+    max-width: 80%;
 }
 .opciones{
     display: flex;
@@ -37,6 +49,10 @@
     align-items: center;
     padding: 0;
     margin: 0;
+    /*background-color: white;
+    /*
+    min-width: 19vh;
+    */
 }
 .opciones li {
     display: flex;
@@ -46,7 +62,7 @@
     justify-content: center;
     background-color: white;
     border-radius: 5px;
-    width: 19vh;
+    width: 15vh;
     height: 10vh;
     border: 3px solid rgba(243, 40, 40, 0.877);
     margin: 5vh;
@@ -97,10 +113,11 @@ li{
 .informacion {
     display: flex;
     flex-grow: 1; 
-    width: 50%;
+    width: 100%;
     height: 100vh;
     text-align: center;
     justify-content: center;
+    grid-area: informacion;
 }
 .info-especial{
     display: flex;
