Se modifican los estilos

--- a/styles/aulaVirtual.css
+++ b/styles/aulaVirtual.css
@@ -7,16 +7,16 @@
     box-sizing: border-box;
 }
 :root {
-    --cinnabar: #e53030;
+    --cinnabar: #7B241C;
     --cerulean: #0493cf;
-    --golden-fizz: #f9e63e;
+    --golden-fizz: #F1C40F ;
     --jacksons-purple: #213295;
     --denim: #114ecb;
     --oracle: #3e6f7c;
 }
 .wrapper {
     display: grid;
-    background-image: url('../img/Fondo.png');
+    background-image: url('../img/chicaLofi.jpg');
     background-size: cover; 
     background-position: center; 
     height: 100vh; 
@@ -32,6 +32,7 @@
     justify-content: center;
     height: 100vh;
     width: 100%;
+    min-width: 200px;
     max-width: 250px;
     border-radius: 10px;
     grid-area: tabladeopciones;
@@ -64,12 +65,12 @@
     border-radius: 5px;
     width: 15vh;
     height: 10vh;
-    border: 3px solid rgba(243, 40, 40, 0.877);
+    border: 3px solid rgba(169, 50, 38, 0.877);
     margin: 5vh;
     transition-duration: 0.4s;
 }
 .opciones li:hover{
-    background-color: rgba(243, 40, 40, 0.87); 
+    background-color: rgba(169, 50, 38, 0.877); 
 }
 .opciones li a {
     display: flex; 
@@ -97,7 +98,7 @@ li{
 .curso{
     display: flex;
     flex-direction: row;
-    background-color: #4edd7d; /* Fondo de color verde claro */
+    background-color: #F7DC6F  ; /* Fondo de color verde claro */
     border-radius: 10px;
     backdrop-filter: blur(5px); /* Efecto difuminado */
 }
