--- a/styles/coursesstyle.css
+++ b/styles/coursesstyle.css
@@ -12,6 +12,7 @@
   align-self: center;
   position: sticky;
   width: 100%;
+  max-width: 900px;
   top: 0;
   --distance-top: calc(32%);
 }
@@ -59,18 +60,20 @@
 }
 .card {
   top: var(--distance-top);
-  padding-top: calc(var(--item) * 1em);
-  margin-bottom: calc(var(--item) * 1em);
+  padding-top: calc(var(--item) * 1.5em);
+  margin-bottom: calc(var(--item) * 1.5em);
 }
-.card > .card-content {
+.card-content {
   width: 100%;
-  height: 40vh;
+  /*height: 40vh;*/
   border-radius: 15px;
   outline: var(--red) 2px solid;
   animation: stackcards linear both;
   animation-timeline: view();
+  padding: 1em .5em;
+  gap: 2em;
 
-  max-height: 300px;
+  max-height: 520px;
   background-color: var(--color-header);
 
   display: grid;
@@ -87,5 +90,84 @@
 @keyframes stackcards {
   to {
     transform: scale(calc(var(--item) * 0.05 + 0.7));
+  }
+}
+
+
+.title-card, .info-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  flex-direction: column;
+}
+.info-card {
+  flex-direction: row;
+  justify-content: start;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  padding: 1em .7em 3em .7em;
+  &::-webkit-scrollbar {
+    background-color: lightblue;
+    border-radius: 50em;
+    height: 3px;
+    width: 50px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--red);
+    border-radius: 50em;
+  }
+  &::-webkit-scrollbar-track {
+    width: 50px;
+  }
+}
+.title-card h2 {
+  background-color: white;
+  border-radius: 50em;
+  padding: .4em;
+}
+.title-card h3 {
+  color: rgb(220 220 220);
+  font-size: 1.2em;
+  padding: .4em 2em;
+  text-align:left;
+  text-wrap: balance;
+}
+.info-card h3{
+  background-color: var(--red);
+  color: white;
+  border-radius: 50em;
+  padding: .4em .5em;
+}
+
+.info-card > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: .8em;
+  flex: 0 0 100%;
+  width: 100%;
+  scroll-snap-align: center;
+}
+.info-card .info {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: .4em;
+  flex-wrap: wrap;
+  & h4 {
+    position: relative;
+    margin: .4em .5em;
+    color: rgb(10 10 10);
+  }
+  & h4::after {
+    content: '';
+    width: 100%;
+    position: absolute;
+    bottom: -.3em;
+    left: 0;
+    border: var(--hover-nav) 1px solid;
+    border-radius: 50em;
   }
 }
