--- a/styles/cards.css
+++ b/styles/cards.css
@@ -33,6 +33,11 @@
     --distance-top: calc(8%);
   }
 }
+@media (height > 600px) and (width > 1000px){
+  .card {
+    --distance-top: calc(17%);
+  }
+}
 @media (height > 700px){
   .card {
     --distance-top: calc(16%);
