--- a/styles/aulaVirtual.css
+++ b/styles/aulaVirtual.css
@@ -1,140 +1,205 @@
-/*Normalize*/
-/* ultimo funcional: antes de grid
- * a0ec2a5ef682f86b53e05165da4d16536e73d57
- */
-* {
-    margin: 0;
-    box-sizing: border-box;
-}
 :root {
-    --cinnabar: #7B241C;
-    --cerulean: #0493cf;
-    --golden-fizz: #F1C40F ;
-    --jacksons-purple: #213295;
-    --denim: #114ecb;
-    --oracle: #3e6f7c;
+  --blue-transparent: rgb(17 78 203 / .9);
+  --blue-solid: rgb(17 50 230);
+  --red-transparent: rgb(229 48 48 / .9);
+  --yellow-solid: rgb(247 227 7 / .9);
+  --blue-gradient: radial-gradient(circle, rgba(11,146,168,1) 0%, rgba(41,122,219,1) 41%, rgba(9,80,149,1) 100%);
+  --red-gradient: linear-gradient(45deg, rgba(229,48,48,0.01) 0%, rgba(229,48,48,0.15) 88%, rgba(229,48,48,1) 100%);
+  --red: rgb(210 10 25 / .9);
 }
-.wrapper {
+.site-wrapper {
     display: grid;
+    width: 100vw;
+    height: 100vh; 
+    grid-template-columns: minmax(50px, 1fr) 13fr;
+    grid-template-rows: 1fr 8fr;
+    grid-template-areas:
+      "aside header"
+      "aside main"
+    ;
+}
+aside {
+    background-color: darkblue; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    grid-area: aside;
+    height: 100%;
+    padding: 0 1em;
+}
+aside ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    flex: 1;
+    list-style: none;
+    padding: 0;
+}
+@media (width < 800px){
+    .site-wrapper {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 12fr 1fr;
+        grid-template-areas: 
+          "header"
+          "main"
+          "aside"
+        ;
+    }
+    aside ul {
+        flex-direction: row;
+    }
+    aside {
+      padding: .3em 0;
+    }
+    aside li a {
+        padding: 0 .5em;
+    }
+}
+header {
+    grid-area: header;
+    display: flex;
+    justify-content: space-around;
+    background-color: var(--blue-solid);
+    padding: .7em 0;
+
+    & h1, & h2 {
+        display: inline-flex;
+        justify-content: start;
+        align-items:center;
+
+    }
+
+    & h1 {
+        background-color: var(--red);
+        border-radius: 50em;
+        padding: .2em .5em;
+        color: white;
+    }
+    & h2 {
+        color: rgb(230 230 230);
+        position: relative;
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: var(--yellow-solid);
+            height: 2px;
+        }
+    }
+}
+@media (width < 480px) {
+    header h2 {
+        display: none;
+    }
+}
+.header-logo {
+    display: inline-flex;
+    justify-content: end;
+    align-items: center;
+    width: 11%;
+    min-width: 90px;
+}
+.header-logo img {
+    max-width: 100%;
+}
+aside li {
+    border-radius: 50%;
+    transition-duration: 0.4s;
+    &:hover {
+        animation: pulse 1s infinite;
+        background-color: var(--red); 
+        cursor: pointer;
+    }
+}
+aside li a {
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    gap: .15em;
+    text-align: center;
+    color: var(--yellow-solid);
+    flex-direction: column;
+    transition-duration: 0.3s;
+    padding: .5em 0;
+}
+
+
+
+main {
+    grid-area: main;
+    overflow-y:auto;
     background-image: url('../img/chicaLofi.jpg');
     background-size: cover; 
     background-position: center; 
-    height: 100vh; 
-    grid-template-areas:
-    "tabladeopciones informacion"
-    "tabladeopciones informacion"
-}
-.tabladeopciones {
-    background-color: rgba(200, 236, 236, 0.4); 
-    backdrop-filter: blur(10px);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100vh;
-    width: 100%;
-    min-width: 200px;
-    max-width: 250px;
-    border-radius: 10px;
-    grid-area: tabladeopciones;
-}
-.imagenes{
-    /*margin-left: 5%;*/
-}
-.imagenes img{
-    margin-left: 10%;
-    max-width: 80%;
-}
-.opciones{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-    /*background-color: white;
-    /*
-    min-width: 19vh;
-    */
-}
-.opciones li {
-    display: flex;
-    list-style: none;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    background-color: white;
-    border-radius: 5px;
-    width: 15vh;
-    height: 10vh;
-    border: 3px solid rgba(169, 50, 38, 0.877);
-    margin: 5vh;
-    transition-duration: 0.4s;
-}
-.opciones li:hover{
-    background-color: rgba(169, 50, 38, 0.877); 
-}
-.opciones li a {
-    display: flex; 
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    width: 100%; 
-    height: 100%;
-    text-decoration: none !important; /* Elimina el subrayado */
-    color: black; 
-    transition-duration: 0.3s;
-}
-.opciones li a:hover {
-    color: yellow;
-}
-li{
-    list-style-type: none;
+    padding: 1em;
+    gap: 1em;
+
+    display: grid;
+    grid-template-columns: repeat(
+      auto-fill,
+      minmax(250px, 1fr)
+    );
 }
 
-.cursos{
+.card {
+    display: grid;
+    grid-template-columns: repeat(
+      auto-fit,
+      minmax(230px, 1fr)
+    );
+    border-radius: 15px;
+    background-color: var(--blue-transparent);
+    padding: .7em;
+    gap: .7em;
+}
+.img-card {
+    & img {
+        max-width: 100%;
+    }
+}
+
+.info-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    gap: 1em;
 }
-.curso{
+.info-content {
     display: flex;
-    flex-direction: row;
-    background-color: #CCCCCCAA ; /* Fondo de color verde claro */
-    border-radius: 10px;
-    backdrop-filter: blur(5px); /* Efecto difuminado */
+    flex-direction: column;
+    gap: .6em;
+    & strong {
+        font-size: .9em;
+        background-color: var(--red);
+        border-radius: 50em;
+        padding: .2em .4em;
+        color: white;
+    }
+    & span {
+        position: relative;
+        &::after{
+            content: '';
+            position: absolute;
+            bottom: -.2em;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background-color: var(--yellow-solid);
+        }
+    }
+    & h2 {
+        background-color: rgb(230 230 230);
+        color: var(--blue-transparent);
+        border-radius: 50em;
+        padding: .3em .7em;
+    }
 }
-.curso *{ /* Para todos los elementos dentro de article curso*/
-    margin: 3vh;
-    border-radius: 3vh;
-    transition-duration: 0.3s;
-}
-.curso img{
-    border-radius: 1vh;
-}
-.imagen{
-   display: flex;
-   align-items: center;
-   justify-content: center;
-}
-.informacion {
-    display: flex;
-    flex-grow: 1; 
-    width: 100%;
-    height: 100vh;
-    text-align: center;
-    justify-content: center;
-    grid-area: informacion;
-}
-.info-especial{
-    display: flex;
-    flex-direction: column;   
-    align-items: center;
-    justify-content: space-around; /* Distribuye el espacio alrededor de los elementos */
-}
-.info-partida {
-    flex: 1; /* Ocupa el espacio disponible de manera equitativa */
-    max-width: 100vh; 
-    padding: 10px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    margin: 5px; /* Agrega un pequeÃ±o margen entre las secciones */
+@keyframes pulse {
+  from {
+    box-shadow: 0 0 0 0 rgb(227 247 7 / 0.3);
+  }
+  to {
+    box-shadow: 0 0 0 11px rgb(227 247 7 / 0);
+  }
 }
