--- a/styles/aulaVirtual.css
+++ b/styles/aulaVirtual.css
@@ -141,6 +141,10 @@ main {
       auto-fill,
       minmax(250px, 1fr)
     );
+    grid-template-rows: repeat(
+      auto-fill,
+      minmax(1fr, 300px)
+    );
 }
 
 .card {
