--- a/styles/aulaVirtual.css
+++ b/styles/aulaVirtual.css
@@ -141,22 +141,20 @@ main {
       auto-fill,
       minmax(250px, 1fr)
     );
-    grid-template-rows: repeat(
-      auto-fill,
-      minmax(1fr, 300px)
-    );
 }
 
 .card {
-    display: grid;
-    grid-template-columns: repeat(
-      auto-fit,
-      minmax(230px, 1fr)
-    );
-    border-radius: 15px;
-    background-color: var(--blue-transparent);
-    padding: .7em;
-    gap: .7em;
+  align-self: center;
+
+  display: grid;
+  grid-template-columns: repeat(
+  auto-fit,
+  minmax(230px, 1fr)
+  );
+  border-radius: 15px;
+  background-color: var(--blue-transparent);
+  padding: .7em;
+  gap: .7em;
 }
 .img-card {
     & img {
