--- a/styles/aulaVirtual.css
+++ b/styles/aulaVirtual.css
@@ -103,6 +103,7 @@ header {
 }
 .header-logo img {
     max-width: 100%;
+    border-radius: 10px;
 }
 aside li {
     border-radius: 50%;
@@ -154,7 +155,7 @@ main {
   );
   border-radius: 15px;
   background-color: var(--blue-transparent);
-  padding: .7em;
+  padding: 1.5em;
   gap: .7em;
 }
 .img-card {
@@ -163,7 +164,9 @@ main {
     }
 }
 
-.info-container {
+.info-container { 
+  justify-self: center;
+  align-self: center;
     display: flex;
     flex-direction: column;
     gap: 1em;
@@ -197,7 +200,7 @@ main {
 .info-slider-content {
   width: 100%;
   flex: 0 0 100%;
-  gap: .8em;
+  gap: 1em;
   scroll-snap-align: center;
 
 }
