--- a/styles/cards.css
+++ b/styles/cards.css
@@ -114,6 +114,18 @@
   }
 }
 
+.teachers-card .title-card {
+  position: relative;
+  & img {
+    max-height: 200px;
+  }
+  & h2 {
+    text-align: center;
+    font-size: 1em;
+    position: absolute;
+    bottom: 0;
+  }
+}
 
 .title-card, .info-card {
   display: flex;
